Added API structure

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.12"
 stravalib = "^2.4"
+fastapi = "^0.115.0"
+uvicorn = { extras = ["standard"], version = "^0.30.0" }
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.4"
@@ -21,6 +23,7 @@ types-requests = "^2.32.0"
 
 [tool.poetry.scripts]
 strava-recent-activities = "strava_customgpt_action.cli:main"
+strava-activities-api = "strava_customgpt_action.server:main"
 
 [tool.black]
 line-length = 88
