--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,11 +21,14 @@ ruff = "^0.4"
 mypy = "^1.10"
 pre-commit = "^3.7"
 types-requests = "^2.32.0"
+pytest = "^8.2"
+httpx = "^0.27"
 
 [tool.poetry.scripts]
 strava-recent-activities = "strava_customgpt_action.cli:main"
 strava-activities-api = "strava_customgpt_action.server:main"
 strava-auth = "strava_customgpt_action.auth:main"
+pytest = "strava_customgpt_action.testing:main"
 
 [tool.black]
 line-length = 88
