--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.12"
 stravalib = "^2.4"
+fastapi = "^0.115.0"
+uvicorn = { extras = ["standard"], version = "^0.30.0" }
+python-dotenv = "^1.0.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.4"
@@ -18,9 +21,14 @@ ruff = "^0.4"
 mypy = "^1.10"
 pre-commit = "^3.7"
 types-requests = "^2.32.0"
+pytest = "^8.2"
+httpx = "^0.27"
 
 [tool.poetry.scripts]
 strava-recent-activities = "strava_customgpt_action.cli:main"
+strava-activities-api = "strava_customgpt_action.server:main"
+strava-auth = "strava_customgpt_action.auth:main"
+pytest = "strava_customgpt_action.testing:main"
 
 [tool.black]
 line-length = 88
